# CECILIA-Simple

./: .gitignore  .gitmodules  CMakeLists.txt  FIXME.md  README.md  benchmark.sh  scalability_analysis_exp_result_plotter.ipynb
apps/: helper.cpp
apps/aupr/: helper.cpp  proxy.cpp
apps/auroc/: helper.cpp  proxy.cpp
apps/auroctie/: helper.cpp  proxy.cpp
apps/benchmark/: PartyBm.h  Party_BM.h  benchmark.sh  main.cpp  proxy.cpp  toxiproxy-cli-linux-amd64.REMOVED.git-id  toxiproxy-server-linux-amd64.REMOVED.git-id
apps/boolean/: proxy.cpp
apps/cnn/: helper.cpp  mnist_reader.hpp  mnist_reader_common.hpp  model_parser.h  proxy.cpp
apps/cnn/mnist_data/: mnist_utils.hpp
apps/cnn/model_files/: MiniONN.txt
apps/cnn/model_files/Cell_CNN/: conv0_bias.txt  conv0_weight_0.txt  conv0_weight_1.txt  conv0_weight_2.txt  conv0_weight_3.txt  conv0_weight_4.txt  conv0_weight_5.txt  conv0_weight_6.txt  conv0_weight_7.txt  fc0_bias.txt  fc0_weight.txt
apps/cnn/model_files/Chameleon_CNN/: bs_conv0.txt  bs_dense0.txt  bs_dense1.txt  conv0_bias.txt  conv0_weight_0.txt  conv0_weight_1.txt  conv0_weight_2.txt  conv0_weight_3.txt  conv0_weight_4.txt  fc0_bias.txt  fc0_weight.txt  fc1_bias.txt  fc1_weight.txt  ws_conv0_filter0.txt  ws_conv0_filter1.txt  ws_conv0_filter2.txt  ws_conv0_filter3.txt  ws_conv0_filter4.txt  ws_dense0.txt  ws_dense1.txt
apps/cnn/model_files/LeNet5/: conv0_bias.txt  conv0_weight_0.txt  conv0_weight_1.txt  conv0_weight_2.txt  conv0_weight_3.txt  conv0_weight_4.txt  conv0_weight_5.txt  conv1_bias.txt  conv1_weight_0.txt  conv1_weight_1.txt  conv1_weight_10.txt  conv1_weight_11.txt  conv1_weight_12.txt  conv1_weight_13.txt  conv1_weight_14.txt  conv1_weight_15.txt  conv1_weight_2.txt  conv1_weight_3.txt  conv1_weight_4.txt  conv1_weight_5.txt  conv1_weight_6.txt  conv1_weight_7.txt  conv1_weight_8.txt  conv1_weight_9.txt  conv2_bias.txt  conv2_weight_0.txt  conv2_weight_1.txt  conv2_weight_10.txt  conv2_weight_100.txt  conv2_weight_101.txt  conv2_weight_102.txt  conv2_weight_103.txt  conv2_weight_104.txt  conv2_weight_105.txt  conv2_weight_106.txt  conv2_weight_107.txt  conv2_weight_108.txt  conv2_weight_109.txt  conv2_weight_11.txt  conv2_weight_110.txt  (+109 more)
apps/cnn/model_files/LeNet_trained/: conv0_bias.txt  conv0_weight_0.txt  conv0_weight_1.txt  conv0_weight_10.txt  conv0_weight_12.txt  conv0_weight_13.txt  conv0_weight_14.txt  conv0_weight_15.txt  conv0_weight_16.txt  conv0_weight_17.txt  conv0_weight_18.txt  conv0_weight_19.txt  conv0_weight_2.txt  conv0_weight_3.txt  conv0_weight_4.txt  conv0_weight_5.txt  conv0_weight_6.txt  conv0_weight_7.txt  conv0_weight_8.txt  conv0_weight_9.txt  conv1_bias.txt  conv1_weight_0.txt  conv1_weight_1.txt  conv1_weight_10.txt  conv1_weight_11.txt  conv1_weight_12.txt  conv1_weight_13.txt  conv1_weight_14.txt  conv1_weight_15.txt  conv1_weight_16.txt  conv1_weight_17.txt  conv1_weight_18.txt  conv1_weight_19.txt  conv1_weight_2.txt  conv1_weight_20.txt  conv1_weight_21.txt  conv1_weight_22.txt  conv1_weight_23.txt  conv1_weight_24.txt  conv1_weight_25.txt  (+35 more)
apps/cnn/single_cell_data/: Sample_10_T1.txt.REMOVED.git-id  Sample_10_T2.txt.REMOVED.git-id  Sample_1_T1.txt.REMOVED.git-id  Sample_1_T2.txt.REMOVED.git-id  Sample_2_T1.txt.REMOVED.git-id  Sample_2_T2.txt.REMOVED.git-id  Sample_3_T1.txt.REMOVED.git-id  Sample_3_T2.txt.REMOVED.git-id  Sample_4_T1.txt.REMOVED.git-id  Sample_4_T2.txt.REMOVED.git-id  Sample_5_T1.txt.REMOVED.git-id  Sample_5_T2.txt.REMOVED.git-id  Sample_6_T1.txt.REMOVED.git-id  Sample_6_T2.txt.REMOVED.git-id  Sample_7_T1.txt.REMOVED.git-id  Sample_7_T2.txt.REMOVED.git-id  Sample_8_T1.txt.REMOVED.git-id  Sample_8_T2.txt.REMOVED.git-id  Sample_9_T1.txt.REMOVED.git-id  Sample_9_T2.txt.REMOVED.git-id
apps/demo/: proxy.cpp
apps/exercise/: proxy.cpp
apps/felicia/: proxy.cpp
apps/recordlinkage/: PartyRL.h  main.cpp
apps/rkn/: helper.cpp  proxy.cpp
apps/sort/: proxy.cpp
apps/test/: Test.h  TestCore.h  helper.cpp  mainTest.cpp  proxy.cpp
booleancore/: core.h
core/: Party.h  auc.h  cnn.h  core.h  parallel_core.h  rkn.h  sort.h
exp_runners/: aupr_delta_exp.sh  aupr_num_parties_exp.sh  aupr_num_samples_exp.sh  aupr_unbalanced_exp.sh  auroc_no_tie_delta_exp.sh  auroc_no_tie_num_parties_exp.sh  auroc_no_tie_num_samples_exp.sh  auroc_no_tie_unbalanced_exp.sh  auroc_with_tie_delta_exp.sh  auroc_with_tie_num_parties_exp.sh  auroc_with_tie_num_samples_exp.sh  auroc_with_tie_unbalanced_exp.sh
exp_runners/results/aupr/: aupr_delta_helper  aupr_delta_p1  aupr_delta_p2  aupr_num_parties_helper  aupr_num_parties_p1  aupr_num_parties_p2  aupr_num_samples_helper  aupr_num_samples_p1  aupr_num_samples_p2  aupr_unbalanced_helper  aupr_unbalanced_p1  aupr_unbalanced_p2
exp_runners/results/aupr/initial_results/: aupr_delta_helper  aupr_delta_p1  aupr_delta_p2  aupr_num_parties_p1  aupr_num_parties_p2  aupr_num_samples_p1  aupr_num_samples_p2
exp_runners/results/auroc_no_tie/: auroc_no_tie_delta_helper  auroc_no_tie_delta_p1  auroc_no_tie_delta_p2  auroc_no_tie_num_parties_helper  auroc_no_tie_num_parties_p1  auroc_no_tie_num_parties_p2  auroc_no_tie_num_samples_helper  auroc_no_tie_num_samples_p1  auroc_no_tie_num_samples_p2  auroc_no_tie_unbalanced_helper  auroc_no_tie_unbalanced_p2
exp_runners/results/auroc_no_tie/ISMB_2023_auroc_no_tie/: auroc_no_tie_delta_helper  auroc_no_tie_delta_p2  auroc_no_tie_num_samples_p1  auroc_no_tie_unbalanced_p1
exp_runners/results/auroc_with_tie/: auroc_with_tie_delta_helper  auroc_with_tie_delta_p1  auroc_with_tie_delta_p2  auroc_with_tie_num_parties_helper  auroc_with_tie_num_parties_p1  auroc_with_tie_num_parties_p2  auroc_with_tie_num_samples_helper  auroc_with_tie_num_samples_p1  auroc_with_tie_num_samples_p2  auroc_with_tie_unbalanced_helper  auroc_with_tie_unbalanced_p1  auroc_with_tie_unbalanced_p2
exp_runners/results/with_time_measure/aupr/: aupr_delta_p1  aupr_num_parties_helper  (+5 more)
exp_runners/rkn_experiments/benchmarking/: function_8_2_lan.txt
utils/: AES_CTR_RBG.h  AesCtrRbg.h  auc_utils.h  connection.h  constant.h  flib.h  llib.h  test_functions.h
(+11321 files in other folders)
